download dos dados

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,14 +16,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e991fceb-2f9f-49b4-a2aa-501db7ef9dea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "8ccab493-99ac-4d6c-bc01-91d397f3dc80",
    "metadata": {},
@@ -51,8 +43,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "2f00350d-b8e5-4d40-8a65-b5655c18380d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !mkdir data\n",
+    "# !wget -L https://raw.githubusercontent.com/pedrocwb/pos-fiep/master/data/test.csv -P data/\n",
+    "# !wget -L https://raw.githubusercontent.com/pedrocwb/pos-fiep/master/data/train.csv -P data/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60f2f803-e4a9-4938-8288-42ebddbc25a4",
+   "id": "588a7779-c1c2-4e26-b1a0-b791e9a6efc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "799b7291-dda7-4df2-8cb0-ad5b88538d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,70 +93,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "f7c69813-72bc-4bff-815f-3f3c41575a06",
-   "metadata": {},
-   "source": [
-    "# Entendendo os dados"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09253eee-114e-4ccd-ab44-0a1c6d90007b",
-   "metadata": {},
-   "source": [
-    "Quais são as caracteristicas presentes nos datasets?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a527224d-7043-4d8d-ba7e-9c9cbe56cb5c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f31f818-f5c8-49ff-a940-b0445d564c6a",
-   "metadata": {},
-   "source": [
-    "Quais caracteristicas são categóricas e quais são numéricas?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "206c83e0-9447-4668-be9b-21a3c480e3cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4ceba47-76e2-4c5b-924a-1f2a9e6d92fd",
-   "metadata": {},
-   "source": [
-    "Quais caracteristicas tem dados ambos?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2708fe57-cff2-41a7-aef4-2f3cc8d09d5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9576534a-4ae1-49a6-92ef-736dbeddce04",
-   "metadata": {},
-   "source": [
-    "Quais caracteristicas contém erros "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f7622905-de33-4c43-9b39-ee3dd93920f0",
@@ -155,7 +103,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cc7a15-bc36-44b3-99a3-77b49c5c9e20",
+   "id": "21aabf25-0b9c-4fde-8c38-200adae05f69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d508f273-d9d5-4090-9a0d-f2e20bceaa98",
    "metadata": {},
    "outputs": [],
    "source": []
